--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="512x512" href="/icons/pwa-512x512.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon-180x180.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tiqvah Solutions</title>
+    <title>Tiqvah Solutions Limited</title>
   </head>
   <body>
     <div id="root"></div>
